--- a/index.html
+++ b/index.html
@@ -16,18 +16,38 @@
 </head>
 <body>
 
-  Get insights that help your business grow.
+<main>
+  <div class="hero">
+    <picture>
+      <source srcset="./images/image-header-mobile.jpg" media="(min-width: 600px)">
+      <img src="./images/image-header-desktop.jpg" alt="MDN">
+    </picture>
+    <div class="overlay"></div>
+  </div>
+  <div class="card-text">
+    <div class="title">Get insights that help your business grow.</div>
+    <div class="text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      experience, and overall efficiency.</div>
+    <div class="stats">
+      <div>
+        <p>10k+</p>
+        <p>companies</p>
+      </div>
+      <div>
+        <p>314</p>
+        <p>templates</p>
+      </div>
+      <div>
+        <p>12m+</p>
+        <p>queries</p>
+      </div>
+    </div>
+  </div>
+</main>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
