--- a/index.html
+++ b/index.html
@@ -1,53 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
-<main>
-  <div class="hero">
-    <picture>
-      <source srcset="./images/image-header-mobile.jpg" media="(min-width: 600px)">
-      <img src="./images/image-header-desktop.jpg" alt="MDN">
-    </picture>
-    <div class="overlay"></div>
-  </div>
-  <div class="card-text">
-    <div class="title">Get insights that help your business grow.</div>
-    <div class="text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-      experience, and overall efficiency.</div>
-    <div class="stats">
-      <div>
-        <p>10k+</p>
-        <p>companies</p>
-      </div>
-      <div>
-        <p>314</p>
-        <p>templates</p>
-      </div>
-      <div>
-        <p>12m+</p>
-        <p>queries</p>
+  <main class="main">
+    <div class="hero">
+      <picture class="hero-picture">
+        <source class="img" srcset="./images/image-header-mobile.jpg" media="(min-width: 600px)">
+        <img class="img" src="./images/image-header-desktop.jpg" alt="MDN">
+      </picture>
+      <div class="overlay"></div>
+    </div>
+    <div class="card-text">
+      <div class="title">Get <span class="insigths">insights</span> that help your business grow.</div>
+      <div class="text">Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.</div>
+      <div class="stats">
+        <div>
+          <p class="stats-num">10k+</p>
+          <p class="stats-text">companies</p>
+        </div>
+        <div>
+          <p class="stats-num">314</p>
+          <p class="stats-text">templates</p>
+        </div>
+        <div>
+          <p class="stats-num">12m+</p>
+          <p class="stats-text">queries</p>
+        </div>
       </div>
     </div>
-  </div>
-</main>
+  </main>
 
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </footer>
 </body>
+
 </html>
